--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -29,7 +29,7 @@ jobs:
       PLATFORM:
     strategy:
       matrix:
-        ARCH: ["arm32v7"]
+        ARCH: ["armv7"]
         DISTRO: [alpine-3.17, alpine-3.18, ubuntu-jammy]
 
     steps:
