--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -27,6 +27,7 @@ jobs:
       DISTRONAME:
       DISTROVER:
     strategy:
+      fail-fast: false
       matrix:
         architecture: ["armv7", "x86_64", "aarch64"]
         DISTRO: [alpine-3.17, alpine-3.18, ubuntu-jammy]
