Continue if only some packages are built

--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -26,6 +26,7 @@ jobs:
     env:
       DISTRONAME:
       DISTROVER:
+    continue-on-error: true
     strategy:
       fail-fast: false
       matrix:
