--- a/.github/workflows/wheelie_scheduler.yml
+++ b/.github/workflows/wheelie_scheduler.yml
@@ -60,6 +60,7 @@ jobs:
         run: |
           DISTRO="$(echo '${{ matrix.TAG }}' | sed -r 's/:/-/g')"
           echo "DISTRO=$DISTRO" >> $GITHUB_OUTPUT
+          echo "$GITHUB_OUTPUT"
           docker run -d --rm --name $DISTRO ghcr.io/chukysoria/baseimage-${{ matrix.TAG }}
 
       - name: 🚀 Install dependencies        
