--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -166,15 +166,17 @@ jobs:
           echo "pushing wheels as necessary"
           mkdir dist
             for os in ubuntu $(cat ./temp/distros.txt | grep alpine); do
-              for wheel in $(ls ./builds/build-${os}/); do
-              if ! grep -q "${wheel}" "./temp/docs/${os}/published.txt" && ! echo "${wheel}" | grep -q "none-any"; then
-                  echo "**** ${wheel} for ${os} will be uploaded to Python Package Repo ****"
-                  UPLOADED="${UPLOADED}\\n${wheel}" 
-                  cp  "./builds/build-${os}/${wheel}" "./dist"
-                  echo ${wheel} >> "./temp/docs/${os}/published.txt"
-              else
-                  echo "**** ${wheel} for ${os} already processed, skipping****"
-              fi
+              for arch in armv7 x86_64 aarch64; do
+                for wheel in $(ls ./builds/build-${os}-${arch}/); do
+                  if ! grep -iq "${wheel}" "./temp/docs/${os}/published.txt" && ! echo "${wheel}" | grep -iq "none-any"; then
+                      echo "**** ${wheel} for ${os} will be uploaded to Python Package Repo ****"
+                      UPLOADED="${UPLOADED}\\n${wheel}" 
+                      cp  "./builds/build-${os}-${arch}/${wheel}" "./dist"
+                      echo ${wheel} >> "./temp/docs/${os}/published.txt"
+                  else
+                      echo "**** ${wheel} for ${os} already processed, skipping****"
+                  fi
+                done
               done
           done
           if [ -n "${UPLOADED}" ]; then
