--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -172,7 +172,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: 
       - build-multi
-      - get-variables
     steps:
       - name: ⤵️ Checkout to temp folder
         uses: actions/checkout@v4.2.0
@@ -192,7 +191,7 @@ jobs:
           echo "pushing wheels as necessary"
           mkdir dist
             for os in ubuntu $(cat ./temp/distros.txt | grep alpine); do
-              for arch in ${{ needs.get-variables.outputs.ARCHS }}; do
+              for arch in $(cat ./temp/arch.txt | grep alpine); do
                 for wheel in $(ls ./builds/build-${os}-${arch}/); do
                   if ! grep -iq "${wheel}" "./temp/docs/${os}/published.txt" && ! echo "${wheel}" | grep -iq "none-any"; then
                       echo "**** ${wheel} for ${os} will be uploaded to Python Package Repo ****"
